--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
     "daisyui": "^5.0.0-beta.8",
+    "lucide-vue-next": "^0.475.0",
     "tailwindcss": "^4.0.6",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
