--- a/package.json
+++ b/package.json
@@ -12,20 +12,23 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/vue-table": "^8.21.3",
+    "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "^13.9.0",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.544.0",
     "pinia": "^3.0.3",
-    "reka-ui": "^2.5.0",
+    "reka-ui": "^2.5.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
     "tw-animate-css": "^1.3.8",
+    "vee-validate": "^4.15.1",
     "vue": "^3.5.21",
     "vue-router": "4",
     "vue-sonner": "^2.0.8",
-    "vue3-simple-icons": "^15.6.0"
+    "vue3-simple-icons": "^15.6.0",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@iconify-json/radix-icons": "^1.2.5",
