[Fix] More friendly game account binding tip

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_HARUKI_TOOLBOX_USER_BASE_URL=https://dv.haruki.seiunx.com
+VITE_HARUKI_TOOLBOX_USER_BASE_URL=https://suite-api.haruki.seiunx.com
