--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.544.0",
     "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.7.1",
     "reka-ui": "^2.5.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
