--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "haruki-toolbox",
   "private": true,
-  "version": "6.0.0",
+  "version": "6.1.0",
   "type": "module",
   "scripts": {
     "dev": "bunx --bun vite",
@@ -10,36 +10,36 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.13",
+    "@tailwindcss/vite": "^4.1.18",
     "@tanstack/vue-table": "^8.21.3",
     "@vee-validate/zod": "^4.15.1",
-    "@vueuse/core": "^13.9.0",
+    "@vueuse/core": "^14.1.0",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-vue-next": "^0.544.0",
-    "pinia": "^3.0.3",
+    "lucide-vue-next": "^0.563.0",
+    "pinia": "^3.0.4",
     "pinia-plugin-persistedstate": "^4.7.1",
-    "reka-ui": "^2.5.1",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.13",
-    "tw-animate-css": "^1.3.8",
+    "reka-ui": "^2.7.0",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.18",
+    "tw-animate-css": "^1.4.0",
     "vee-validate": "^4.15.1",
-    "vue": "^3.5.21",
-    "vue-router": "4",
-    "vue-sonner": "^2.0.8",
+    "vue": "^3.5.27",
+    "vue-router": "^4.6.4",
+    "vue-sonner": "^2.0.9",
     "vue3-simple-icons": "^15.6.0",
-    "zod": "^4.3.5"
+    "zod": "^4.3.6"
   },
   "devDependencies": {
-    "@iconify-json/radix-icons": "^1.2.5",
+    "@iconify-json/radix-icons": "^1.2.6",
     "@iconify/vue": "^5.0.0",
-    "@types/node": "^24.5.2",
-    "@vitejs/plugin-vue": "^6.0.1",
+    "@types/node": "^25.0.10",
+    "@vitejs/plugin-vue": "^6.0.3",
     "@vue/tsconfig": "^0.8.1",
-    "typescript": "^5.9.2",
-    "vite": "^7.1.7",
-    "vite-plugin-vue-devtools": "^8.0.2",
-    "vue-tsc": "^3.0.8"
+    "typescript": "^5.9.3",
+    "vite": "7.3.1",
+    "vite-plugin-vue-devtools": "^8.0.5",
+    "vue-tsc": "^3.2.3"
   }
 }
